--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"dotenv": "^16.4.5",
 		"module-alias": "^2.2.3",
 		"moment": "^2.30.1",
+		"node-aria2": "^1.1.0",
 		"prettier": "^3.2.5",
 		"prisma": "^5.14.0",
 		"ts-node-dev": "^2.0.0",
