--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"node-aria2": "^1.1.0",
 		"prettier": "^3.2.5",
 		"prisma": "^5.14.0",
+		"tmdb-ts": "^1.8.0",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.4.2"
 	},
