--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-DATABASE_URL="mysql://JaPlex:WJ8LejoMyiM6Wh2Fcvdb4iJ2to4xjvZi@HOST:3306/JaPlex"
+DATABASE_URL="mysql://USER:PASS@HOST:PORT/DB"
 
 DISCORD_TOKEN=""
 DISCORD_GUILD_ID=""
 
-JACKET_API_URL="https://HOST/api/v2.0"
+JACKETT_API_URL="https://JACKETT_HOST/api/v2.0"
 JACKETT_API_KEY=""
+
+TMDB_API_KEY=""
 
 ARIA2C_HOST="127.0.0.1"
 ARIA2C_PORT=6800
@@ -12,3 +14,7 @@ ARIA2C_SECRET=""
 ARIA2C_PATH="/jsonrpc"
 ARIA2C_DOWNLOAD_PATH="/mnt/media"
 ARIA2C_SECURE=false
+
+PLEX_API_URL="https://PLEX_HOST"
+PLEX_API_KEY=""
+PLEX_LANGUAGE="fr"
